# page-object-utils

./: .pre-commit-config.yaml  README.md  pyproject.toml
page_object_utils/: __init__.py  decorators.py  descriptors.py  exceptions.py  meta.py  page.py  polling.py  types.py
selenium_annotate/: __init__.py  descriptors.py  types.py
tests/: conftest.py  test_find.py
tests/pages/: bing_page.py
