
[tool.poetry]
name = "selenium-annotate"
version = "0.1.0"
description = "Automatically refind webelements on attribute lookup"
authors = ["symonk <jackofspaces@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
tox = "^3.25.0"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
